[gd_scene load_steps=5 format=3 uid="uid://ykeqk6vmwnfj"]

[ext_resource type="Script" uid="uid://cls3tq3irlatx" path="res://base_character.gd" id="1_75idt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tm8wl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_itnm7"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubrwk"]

[node name="BaseCharacter" type="Node2D"]

[node name="BaseCharacterBody" type="CharacterBody2D" parent="."]
script = ExtResource("1_75idt")

[node name="AttackRadius" type="Area2D" parent="BaseCharacterBody"]

[node name="AttackRadiusShape" type="CollisionShape2D" parent="BaseCharacterBody/AttackRadius"]
shape = SubResource("CircleShape2D_tm8wl")

[node name="DamageRadius" type="Area2D" parent="BaseCharacterBody"]

[node name="DamageRadiusShape" type="CollisionShape2D" parent="BaseCharacterBody/DamageRadius"]
shape = SubResource("CircleShape2D_itnm7")

[node name="Timer" type="Timer" parent="BaseCharacterBody"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="BaseCharacterBody"]
libraries = {
&"": SubResource("AnimationLibrary_ubrwk")
}

[connection signal="body_entered" from="BaseCharacterBody/AttackRadius" to="BaseCharacterBody" method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="BaseCharacterBody/AttackRadius" to="BaseCharacterBody" method="_on_attack_radius_body_exited"]
[connection signal="body_entered" from="BaseCharacterBody/DamageRadius" to="BaseCharacterBody" method="_on_damage_radius_body_entered"]
[connection signal="timeout" from="BaseCharacterBody/Timer" to="BaseCharacterBody" method="_on_timeout"]
